@@ -1,3 +1,7 @@
+Sat May 24 13:27:47 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* Makefile: Add install target when cross-compiler is used.
+
 Sun Jul  7 14:15:39 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* DRenderer.s: Encode offsets explicitly as offsets.  Update FSF
